--- a/package.json
+++ b/package.json
@@ -26,10 +26,18 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@typegoose/typegoose": "^10.1.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/mongoose": "^5.11.97",
+    "@types/passport-jwt": "^3.0.8",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
